--- a/donate-items/package.json
+++ b/donate-items/package.json
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "json-server-auth": "^1.2.1",
     "node-sass": "^4.13.1",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.16"
