adding componets CTA, UserAction, NavSroll, Decor and to them

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "json-server-auth": "^1.2.1",
     "node-sass": "^4.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scroll": "^1.7.16"
+    "react-scroll": "^1.7.16",
+    "reset-css": "^5.0.1"
   }
 }
