--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-lorem-ipsum": "^1.4.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
+    "react": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scroll": "^1.7.16",
     "reset-css": "^5.0.1"
