--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react-dom": "^16.13.1",
+    "react-responsive": "^8.1.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
